Update user register function

--- a/development/frontend/.env
+++ b/development/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_GOOGLE_MAPS_API_KEY="AIzaSyCD0Ddx6UPdWGsBUUBR711rCZQYRboSSrw"
+REACT_APP_GOOGLE_MAPS_API_KEY="AIzaSyCD0Ddx6UPdWGsBUUBR711rCZQYRboSSrw"
+REACT_APP_BACKEND_URL=http://localhost:8080
