--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^17.0.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/validator": "^13.7.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.4.2",
     "workbox-broadcast-update": "^6.4.2",
