--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -9,6 +9,7 @@
     "@mantine/core": "^5.10.1",
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@react-google-maps/api": "^2.17.1",
     "@testing-library/jest-dom": "^5.16.5",
