--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/validator": "^13.7.10",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -40,6 +41,7 @@
     "workbox-streams": "^6.4.2"
   },
   "scripts": {
+    "build-prod": "REACT_APP_BACKEND_URL=https://backend.wikipetia.me react-scripts build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
