--- a/development/backend/.env.example
+++ b/development/backend/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/db?schema=public"
+DATABASE_URL_DEV="postgresql://user:password@localhost:5432/db?schema=public"
+DATABASE_URL_PROD="postgresql://user:password@localhost:5432/db?schema=public"
 JWT_SECRET=
