--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.8.1",
     "@types/winston": "^2.4.4",
+    "aws-sdk": "^2.1297.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
