--- a/development/backend/docker-compose.yml
+++ b/development/backend/docker-compose.yml
@@ -3,32 +3,38 @@ version: '3'
 services:
   cas-server:
     environment:
-      NODE_ENV: production
       PORT: 80
-      POSTGRES_HOST: database
-      POSTGRES_PORT: 5432
-      POSTGRES_DB: wikipetiadev
-      POSTGRES_PASSWORD: aMTZsX~CXMy#oR7D2HXH
-      POSTGRES_USER: admin
-      DATABASE_URL: postgresql://admin:aMTZsX~CXMy#oR7D2HXH@localhost:5432/wikipetiadev?schema=public
-      JWT_SERCET: wolemachawolemachawolemacha
-      FRONTEND_URL: https://www.wikipedtia.me
-    links:
-      - database
+      DATABASE_URL: postgresql://admin:aMTZsXCXMyoR7D2HXH@172.1.0.10:5432/wikipetiadev?schema=public
+      JWT_SECRET: wolemachawolemachawolemacha
+      FRONTEND_URL: http://localhost:3000
+    networks:
+      cas:
+        ipv4_address: 172.1.0.2
     depends_on:
       - database
     build:
       context: ./
-      dockerfile: ./Dockerfile
+      dockerfile: ./dockerfile
     image: 'cas-server'
     ports:
       - '8080:80'
   database:
     image: 'postgres:latest'
     environment:
-      POSTGRES_PASSWORD: aMTZsX~CXMy#oR7D2HXH
+      POSTGRES_DB: wikipetiadev
+      POSTGRES_PASSWORD: aMTZsXCXMyoR7D2HXH
       POSTGRES_USER: admin
     ports:
       - '5432:5432'
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./pg/data:/var/lib/postgresql/data
+    networks:
+      cas:
+        ipv4_address: 172.1.0.10
+networks:
+  cas:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.1.0.0/24
