--- a/development/backend/dockerfile
+++ b/development/backend/dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 COPY . .
 
 RUN yarn
+
 RUN mkdir uploads
 
-CMD yarn migrate:dev && yarn seed:dev && yarn start
+CMD yarn prisma generate && yarn migrate:dev && yarn seed:dev && yarn start
