--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "webpack": "^5.75.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
