--- a/development/frontend/.gitignore
+++ b/development/frontend/.gitignore
@@ -4,15 +4,19 @@
 /node_modules
 /.pnp
 .pnp.js
+.vscode
+/pg
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
