--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.8.1",
+    "@types/multer": "^1.4.7",
     "@types/winston": "^2.4.4",
     "aws-sdk": "^2.1297.0",
     "class-transformer": "^0.5.1",
