--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "redux": "^4",
     "typescript": "^4.4.2",
