--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -14,7 +14,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test,utils}/**/*.ts\" --fix",
+    "lint": "eslint \"{prisma,src,apps,libs,test,utils}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
