--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@prisma/client": "^4.9.0",
     "@types/multer": "^1.4.7",
     "@types/winston": "^2.4.4",
