--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
