--- a/development/backend/docker-compose.yml
+++ b/development/backend/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: ./
       dockerfile: ./dockerfile
-    image: 'cas-server'
+    image: wyukman1020/docker
     ports:
       - '8080:80'
       - '5555:5555'
