--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -32,6 +32,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "redux": "^4",
     "typescript": "^4.4.2",
     "validator": "^13.7.0",
