2nd draft cas-deploy.yml

--- a/development/backend/dockerfile
+++ b/development/backend/dockerfile
@@ -6,6 +6,8 @@ COPY . .
 
 RUN yarn
 
-RUN mkdir uploads
+RUN mkdir upload
+
+RUN yarn build
 
 CMD yarn prisma generate && yarn migrate:dev && yarn seed:dev && yarn start
