--- a/development/.github/workflows/cas-deploy.yml
+++ b/development/.github/workflows/cas-deploy.yml
@@ -17,68 +17,68 @@ env:
 jobs:
   test-and-build-server:
     runs-on: ubuntu-latest
-    container: node:lts-alpine
-    services:
-      db:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: ${{env.POSTGRES_DB}}
-          POSTGRES_USER: ${{env.POSTGRES_USER}}
-          POSTGRES_PASSWORD: ${{env.POSTGRES_PASSWORD}}
-        ports:
-          - 5432:5432
-    env:
-      PORT: 8080
-      DB_HOST: db
-      DB_PORT: 5432
+    container: node:latest
+    # services:
+    #   db:
+    #     image: postgres:latest
+    #     env:
+    #       POSTGRES_DB: ${{env.POSTGRES_DB}}
+    #       POSTGRES_USER: ${{env.POSTGRES_USER}}
+    #       POSTGRES_PASSWORD: ${{env.POSTGRES_PASSWORD}}
+    #     ports:
+    #       - 5432:5432
+    # env:
+    #   PORT: 80
+    #   DB_HOST: db
+    #   DB_PORT: 5432
     steps:
       - uses: actions/checkout@v3
-      - name: Install npm deps
-        working-directory: server
+      - name: Install yarn deps
+        working-directory: backend
         run: |
-          npm i
-      - name: Migrate database with knex
-        working-directory: server
+          yarn
+      - name: Migrate database with prisma
+        working-directory: backend
         run: |
-          npx knex migrate:latest
+          yarn prisma generate && yarn migrate:dev && yarn seed:dev
       - name: Build project
-        working-directory: server
+        working-directory: backend
         run: |
-          npm run build
+          yarn build
       - name: Run testing
-        working-directory: server
+        working-directory: backend
         run: |
-          npm run ci
+          yarn start:prod
       - name: archive built files
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: server/dist
+          path: backend/dist
 
   deploy-server-to-docker:
-    needs: test-and-build-server
+    needs: test-and-build-backend
     runs-on: ubuntu-latest
-    container: docker:20.10.21-alpine3.16
+    container: docker:latest
     steps:
       - uses: actions/checkout@v3
-      - name: restore built files server
+      - name: restore built files backend
         uses: actions/download-artifact@v3
         with:
           name: dist
-          path: server/dist
-      - name: Build docker image for server
-        working-directory: server
+          path: backend/dist
+      - name: Build docker image for backend
+        working-directory: backend
         run: |
-          docker build -t server .
+          docker build -t cas-server .
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Do Docker tag and push
-        working-directory: server
+        working-directory: backend
         run: |
-          docker tag server:latest ${{ env.DOCKER_REPO_NAME }}
+          docker tag cas-server:latest ${{ env.DOCKER_REPO_NAME }}
           docker push ${{ env.DOCKER_REPO_NAME }}
 
   ssh-ec2-and-compose-up:
@@ -96,8 +96,9 @@ jobs:
             sudo usermod -aG docker ${{ env.SERVER_USER }}
             sudo service docker restart
             docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-            sudo docker-compose pull
-            sudo docker-compose up -d && sudo docker ps
+            sudo docker pull ${{ env.DOCKER_REPO_NAME }}
+            sudo docker tag ${{ env.DOCKER_REPO_NAME }} cas-server:latest
+            sudo docker compose up -d && sudo docker ps
 
   test-and-build-react:
     runs-on: ubuntu-latest
@@ -106,16 +107,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install yarn deps
         working-directory: frontend
-        run: yarn install
-      - name: run testing
-        working-directory: frontend
-        run: yarn run test
-      - name: Build frondend project
+        run: yarn
+      # - name: run testing
+      #   working-directory: frontend
+      #   run: yarn run test
+      - name: Build frontend project
         working-directory: frontend
         env:
-          REACT_APP_DUMMY_ENVIRONMENTS: some_variables_in_project_dotenv_file
-          REACT_APP_DUMMY_SERVER_ORIGIN: somedomain.io
-          REACT_APP_DUMMY_SOME_SERVER_KEY: nevergonnagiveyouupnevergonnaletyoudown
+          REACT_APP_BACKEND_URL: https://backend.wikipetia.me
         run: yarn run build
       - name: Archive react built files
         uses: actions/upload-artifact@v3
