--- a/development/backend/docker-compose.yml
+++ b/development/backend/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     build:
       context: ./
       dockerfile: ./dockerfile
-    image: wyukman1020/docker
+    image: cas-server
     ports:
       - '8080:80'
       - '5555:5555'
