--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -13,7 +13,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{prisma,src,apps,libs,test,utils}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
