upload mutiple img

--- a/development/backend/.env.example
+++ b/development/backend/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL_PROD="postgresql://user:password@localhost:5432/db?schema=public"
 JWT_SECRET=
 FRONTEND_URL=http://localhost:3000
 PORT=
+UPLOAD_LOCATION=
