--- a/development/.github/workflows/cas-deploy.yml
+++ b/development/.github/workflows/cas-deploy.yml
@@ -11,11 +11,11 @@ env:
   SERVER_USER: ubuntu
   SERVER_DIR: /home/ubuntu/
   BUCKET_NAME: cas-react-development
-  CLOUDFRONT_DISTRIBUTION: EXXXXXXXXXXXX
+  CLOUDFRONT_DISTRIBUTION: E10KX1B5YIW1RZ
   AWS_DEFAULT_REGION: ap-southeast-1
 
 jobs:
-  test-and-build-server:
+  test-and-build-backend:
     runs-on: ubuntu-latest
     container: node:latest
     # services:
@@ -114,6 +114,7 @@ jobs:
       - name: Build frontend project
         working-directory: frontend
         env:
+          REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
           REACT_APP_BACKEND_URL: https://backend.wikipetia.me
         run: yarn run build
       - name: Archive react built files
