--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv-cli": "^6.0.0",
+    "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
