--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -9,6 +9,7 @@
     "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/error-message": "^2.0.1",
     "@mantine/core": "^5.10.1",
     "@mantine/form": "^5.10.1",
     "@mantine/hooks": "^5.10.1",
