--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/validator": "^13.7.10",
     "axios": "^1.2.4",
+    "date-fns": "^2.29.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
