--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -24,11 +24,13 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-icons": "^3.0.0",
     "@types/validator": "^13.7.10",
     "axios": "^1.2.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-images-uploading": "^3.1.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
