--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@prisma/client": "^4.9.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/multer": "^1.4.7",
     "@types/multer-s3": "^3.0.0",
     "@types/winston": "^2.4.4",
@@ -49,7 +50,6 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
