update dockerfile and minor update to package.json

--- a/development/backend/dockerfile
+++ b/development/backend/dockerfile
@@ -10,4 +10,4 @@ RUN mkdir upload
 
 RUN yarn build
 
-CMD yarn prisma generate && yarn migrate:dev && yarn seed:dev && yarn start
+CMD yarn prisma generate && yarn migrate:dev && yarn seed:prod && yarn start:prod
