--- a/development/backend/package.json
+++ b/development/backend/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "migrate:dev": "dotenv -e .env -- prisma migrate dev",
     "seed:dev": "dotenv -e .env -- ts-node prisma/seed.ts",
+    "seed:prod": "dotenv -e .env -- node dist/prisma/seed.js",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -22,6 +23,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/abort-controller": "^3.257.0",
     "@aws-sdk/client-s3": "^3.264.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
