--- a/development/frontend/package.json
+++ b/development/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
     "@react-google-maps/api": "^2.17.1",
+    "@tabler/icons": "^2.2.0",
     "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
