--- a/development/backend/.env.example
+++ b/development/backend/.env.example
@@ -1,6 +1,11 @@
 DATABASE_URL="postgresql://user:password@localhost:5432/db?schema=public"
 DATABASE_URL_PROD="postgresql://user:password@localhost:5432/db?schema=public"
+
 JWT_SECRET=
 FRONTEND_URL=http://localhost:3000
-PORT=
+PORT=8080
+
 UPLOAD_LOCATION=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
