--- a/development/backend/docker-example.env
+++ b/development/backend/docker-example.env
@@ -1,9 +1,11 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/db?schema=schema
+
 JWT_SECRET=
-FRONTEND_URL=http://localhost:3000
-
-
+FRONTEND_URL=https://www.wikipetia.me
 
 POSTGRES_DB=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
