--- a/development/frontend/.gitignore
+++ b/development/frontend/.gitignore
@@ -6,10 +6,7 @@
 .pnp.js
 .vscode
 /pg
-/public/assets
-/src/assets
-/public/uploads
-/src/uploads
+
 
 # testing
 /coverage
@@ -30,3 +27,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# /public/assets
+# /src/assets
+# /public/uploads
+# /src/uploads
