--- a/development/frontend/.env.example
+++ b/development/frontend/.env.example
@@ -1,2 +1,4 @@
 REACT_APP_GOOGLE_MAPS_API_KEY=
 REACT_APP_BACKEND_URL=http://localhost:8080
+REACT_APP_FRONTEND_URL=http://localhost:3000
+REACT_APP_S3_UPLOAD_URL=
