--- a/development/frontend/.gitignore
+++ b/development/frontend/.gitignore
@@ -6,6 +6,10 @@
 .pnp.js
 .vscode
 /pg
+/public/assets
+/src/assets
+/public/uploads
+/src/uploads
 
 
 # testing
@@ -28,8 +32,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-# /public/assets
-# /src/assets
-# /public/uploads
-# /src/uploads
