--- a/development/.github/workflows/cas-deploy.yml
+++ b/development/.github/workflows/cas-deploy.yml
@@ -151,5 +151,4 @@ jobs:
           AWS_DEFAULT_REGION: ${{ env.AWS_DEFAULT_REGION }}
         run: |
           aws s3 sync ./build s3://${{env.BUCKET_NAME}} --delete
-
-# aws cloudfront create-invalidation --distribution-id ${{env.CLOUDFRONT_DISTRIBUTION}} --paths "/*"
+          aws cloudfront create-invalidation --distribution-id ${{env.CLOUDFRONT_DISTRIBUTION}} --paths "/*"
