--- a/development/backend/docker-example.env
+++ b/development/backend/docker-example.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql://user:password@localhost:5432/db?schema=schema
-
+S3_BUCKET=
 JWT_SECRET=
 FRONTEND_URL=https://www.wikipetia.me
 
