--- a/.github/workflows/cas-deploy.yml
+++ b/.github/workflows/cas-deploy.yml
@@ -13,6 +13,7 @@ env:
   BUCKET_NAME: cas-react-development
   CLOUDFRONT_DISTRIBUTION: E10KX1B5YIW1RZ
   AWS_DEFAULT_REGION: ap-southeast-1
+  DATABASE_URL: ${{ secrets.DATABASE_URL}}
 
 jobs:
   test-and-build-backend:
@@ -116,6 +117,7 @@ jobs:
         env:
           REACT_APP_GOOGLE_MAPS_API_KEY: ${{ secrets.REACT_APP_GOOGLE_MAPS_API_KEY }}
           REACT_APP_BACKEND_URL: https://backend.wikipetia.me
+          REACT_APP_S3_UPLOAD_URL: http://upload.wikipetia.me
         run: yarn run build
       - name: Archive react built files
         uses: actions/upload-artifact@v3
