--- a/.github/workflows/cas-deploy.yml
+++ b/.github/workflows/cas-deploy.yml
@@ -13,24 +13,27 @@ env:
   BUCKET_NAME: cas-react-development
   CLOUDFRONT_DISTRIBUTION: E10KX1B5YIW1RZ
   AWS_DEFAULT_REGION: ap-southeast-1
+  POSTGRES_DB: ${{secrets.POSTGRES_DB}}
+  POSTGRES_USER: ${{secrets.POSTGRES_USER}}
+  POSTGRES_PASSWORD: ${{secrets.POSTGRES_PASSWORD}}
 
 jobs:
   test-and-build-backend:
     runs-on: ubuntu-latest
     container: node:latest
-    # services:
-    #   db:
-    #     image: postgres:latest
-    #     env:
-    #       POSTGRES_DB: ${{env.POSTGRES_DB}}
-    #       POSTGRES_USER: ${{env.POSTGRES_USER}}
-    #       POSTGRES_PASSWORD: ${{env.POSTGRES_PASSWORD}}
-    #     ports:
-    #       - 5432:5432
-    # env:
-    #   PORT: 80
-    #   DB_HOST: db
-    #   DB_PORT: 5432
+    services:
+      db:
+        image: postgres:latest
+        env:
+          POSTGRES_DB: ${{env.POSTGRES_DB}}
+          POSTGRES_USER: ${{env.POSTGRES_USER}}
+          POSTGRES_PASSWORD: ${{env.POSTGRES_PASSWORD}}
+        ports:
+          - 5432:5432
+    env:
+      PORT: 80
+      DB_HOST: db
+      DB_PORT: 5432
     steps:
       - uses: actions/checkout@v3
       - name: Install yarn deps
